--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,8 +11,11 @@
 <body>
 
 <div class="container-fluid">
-  <h1 style="color:red;">Hello !</h1>
+  <h1 style="color:red;">Hello ! its working</h1>
 </div>
+  
+  <br>
+  <h3>Version v2</h3>
 
 </body>
 </html>
