--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,13 +9,13 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-
+<center>
 <div class="container-fluid">
-  <h1 style="color:red;">its working</h1>
+  <h1 style="color:red;">its working !!</h1>
 </div>
   
   <br>
   <h3>Version v2</h3>
-
+</center>
 </body>
 </html>
