--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,7 +11,7 @@
 <body>
 <center>
 <div class="container-fluid">
-  <h1 style="color:red;">its working !!</h1>
+  <h1 style="color:red;">its working !! :)</h1>
 </div>
   
   <br>
